CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT (XJBDB)

INCLUDE_DIRECTORIES(
    src/include
    test
)

AUX_SOURCE_DIRECTORY(src DIR_SRCS)
AUX_SOURCE_DIRECTORY(test DIR_TESTS)

ADD_COMPILE_OPTIONS(
    -O2
    -mavx2
    -march=broadwell
)

ADD_DEFINITIONS(-D_xjbDB_GCC_)
ADD_DEFINITIONS(-D_xjbDB_RELEASE_)
ADD_DEFINITIONS(-DSIMPLE_TEST)
ADD_DEFINITIONS(-D_xjbDB_test_VM_)
ADD_DEFINITIONS(-std=c++17)

SET(EXECUTABLE_OUTPUT_PATH "build")
ADD_EXECUTABLE (XJBDB main.cpp ${DIR_SRCS} ${DIR_TESTS})
TARGET_LINK_LIBRARIES(XJBDB pthread)